[package]
name = "zandam-pack"
version = "0.1.1"
authors = ["Nam Jeonghyun <ska827@snu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "^3"
encoding_rs = "^0.8.2"
zandam = { version = "*", path = "../zandam" }
rpassword = "^4"
text-template = "^0.1.0"
maplit = "^1"
base64 = "^0.11.0"