[package]
name = "zandam"
version = "0.2.0"
authors = ["Nam Jeonghyun <ska827@snu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "^0.8.1"
aes-soft = "^0.3.3"
block-modes = "^0.3.3"
hex-literal = "^0.2.1"
wasm-bindgen = "^0.2.58"
console_error_panic_hook = "^0.1.6"

[lib]
crate-type = ["cdylib", "rlib"]

